--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+# DATABASE
 
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Capstone
+spring.datasource.username=sa
+spring.datasource.password=123456
+
+# JPA HIBERNATE 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql = true
+
+	## Hibernate Properties
+	spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+
+	# (create, create-drop, validate, update)
+	spring.jpa.hibernate.ddl-auto = update
+
+# SPRING BOOT DEVTOOL
+spring.devtools.restart.enabled = false
+
+
+
+#jwt PROPERTIES
+
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
