--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- String Utils -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
