Added default messages

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,7 +1,11 @@
 javax.validation.constraints.NotNull.message = must not be null
 javax.validation.constraints.NotBlank.message = must not be blank
 javax.validation.constraints.Size.message = must be between {min} and {max}
-javax.validation.constraints.PositiveOrZero.message = length must be a positive number of 0
+javax.validation.constraints.PositiveOrZero.message = length must be a positive number or 0
+javax.validation.constraints.Max.message = must be lower or equal to {value}
+javax.validation.constraints.Min.message = must be higher or equal to {value}
 
 #
 Email.message = is invalid
+Username.message = is invalid
+Password.message = is invalid
