--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql = true
 	spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
 	# (create, create-drop, validate, update)
-	spring.jpa.hibernate.ddl-auto = update
+	spring.jpa.hibernate.ddl-auto = none
 
 # SPRING BOOT DEVTOOL
 spring.devtools.restart.enabled = false
