Commented/Shortened codes

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,5 @@
+# Default messages for javax.validation.constraints
+
 javax.validation.constraints.NotNull.message = must not be null
 javax.validation.constraints.NotBlank.message = must not be blank
 javax.validation.constraints.Size.message = must be between {min} and {max}
