--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Capstone
 spring.datasource.username=sa
-spring.datasource.password=1234
+spring.datasource.password=123456
 
 # JPA HIBERNATE 
 spring.jpa.show-sql=true
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql = true
 	spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
 	# (create, create-drop, validate, update)
-	spring.jpa.hibernate.ddl-auto = update
+	spring.jpa.hibernate.ddl-auto = none
 
 # SPRING BOOT DEVTOOL
 spring.devtools.restart.enabled = false
