Added Gender enum

--- a/src/main/resources/i18nEnum.properties
+++ b/src/main/resources/i18nEnum.properties
@@ -7,9 +7,15 @@ OpportunityPhase.NEGOTIATION = \u0110àm phán, th\u01B0\u01A1ng l\u01B0\u1EE3ng
 OpportunityPhase.SUCCESS_FINISH = K\u1EBFt thúc thành công
 OpportunityPhase.FAILURE_FINISH = K\u1EBFt thúc th\u1EA5t b\u1EA1i
 
+# OpportunityPhase
 OpportunityPhase.beginning = M\u1EDF \u0111\u1EA7u
 OpportunityPhase.customer_interest = Khách hàng t\u1EF1 tìm ki\u1EBFm
 OpportunityPhase.demo = DEMO / gi\u1EDBi thi\u1EC7u
 OpportunityPhase.negotiation = \u0110àm phán, th\u01B0\u01A1ng l\u01B0\u1EE3ng
 OpportunityPhase.success_finish = K\u1EBFt thúc thành công
 OpportunityPhase.failure_finish = K\u1EBFt thúc th\u1EA5t b\u1EA1i
+
+# Gender
+Gender.male = Name
+Gender.female = N\u1EEF
+Gender.other = Khác
