Added MaritalStatus enum

--- a/src/main/resources/i18nEnum.properties
+++ b/src/main/resources/i18nEnum.properties
@@ -19,3 +19,9 @@ OpportunityPhase.failure_finish = K\u1EBFt thúc th\u1EA5t b\u1EA1i
 Gender.male = Name
 Gender.female = N\u1EEF
 Gender.other = Khác
+
+# MaritalStatus
+MaritalStatus.not_married = Ch\u01B0a k\u1EBFt hôn
+MaritalStatus.married = \u0110ã k\u1EBFt hôn
+MaritalStatus.divorced = \u0110ã ly hôn
+MaritalStatus.other = Khác
