--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.properties.hibernate.format_sql = true
 	## Hibernate Properties
 	spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
-	# (create, create-drop, validate, update)
-	spring.jpa.hibernate.ddl-auto = none
+	# (create, create-drop, validate, update, none)
+	spring.jpa.hibernate.ddl-auto = update
 
 # SPRING BOOT DEVTOOL
 spring.devtools.restart.enabled = false
