--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=sa
 spring.datasource.password=123456
 
 # JPA HIBERNATE 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql = true
 
 	## Hibernate Properties
