--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 # DATABASE
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -13,7 +14,7 @@ spring.jpa.properties.hibernate.format_sql = true
 	spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
 	# (create, create-drop, validate, update, none)
-	spring.jpa.hibernate.ddl-auto = none
+	spring.jpa.hibernate.ddl-auto = update
 
 # SPRING BOOT DEVTOOL
 spring.devtools.restart.enabled = false
